# Proxy-IP-Collector

./: .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  ETL架構規格書.md  README.md  deployment-report-20250922-094602.json  docker-compose.sqlite.yml  docker-compose.yml  test_system_status.py  代理IP池收集器 Proxy IP Pool Collector專案.md  採用的技術棧.md
backend/: .coveragerc  .env.example  .env.sqlite  Dockerfile  MIGRATION_GUIDE.md  database_config_template.py  database_diagnostic_report.json  database_schema.sql  debug_direct.py  detailed_test.py  diagnostic_results.json  e2e_test.py  e2e_test_report.json  improvement_plan.json  improvement_plan.py  launch_unified.py  main.py  next_steps.md  proxy_validation_report.json  proxy_validator.py  pyproject.toml  pytest.ini  quick_test.py  react_server.py  requirements.txt  run.py  setup_sqlite_dev.py  simple_db_test.py  simple_main.py  simple_proxy_validator.py  simple_server.py  simple_test.py  start_sqlite_dev.bat  start_sqlite_dev.sh  system_diagnostics.py  test_api.py  test_api_endpoints.py  test_api_fix.py  test_database_connection.py  test_debug_api.py  (+16 more)
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  monitoring_endpoints.py
backend/app/architecture/: __init__.py  api_standard.py  config_manager.py  health_check.py  service_launcher.py  unified_server.py
backend/app/core/: config.py  config_improved.py  config_manager.py  database.py  database_config.py  database_manager.py  logging.py  (+15 more)
backend/config/: default.yaml  proxy_sources.json
backend/data/: proxy_collector.db
backend/test_data/: crud_test.db  test_manager.db
backend/test_reports/: e2e_test_report_20250922_100406_detailed.json  e2e_test_report_20250922_175431_detailed.json  e2e_test_report_20250922_183716_detailed.json  integration_test_report_20250922_100406_detailed.json  integration_test_report_20250922_175431_detailed.json  integration_test_report_20250922_183716_detailed.json  overall_test_report_20250922_100406.json  overall_test_report_20250922_175432.json  overall_test_report_20250922_183716.json  test_summary.json  unit_test_report_20250922_100406_detailed.json  unit_test_report_20250922_131105_detailed.json  unit_test_report_20250922_144252_detailed.json  unit_test_report_20250922_175431_detailed.json  unit_test_report_20250922_183716_detailed.json
backend/tests/: conftest.py  conftest_extended.py  pytest.ini  quick_test.py  run_tests.py  test_database_config.py  test_monitoring_quick.py
(+216 files in other folders)
